--- a/assets/lang/zh-cn.json
+++ b/assets/lang/zh-cn.json
@@ -1057,25 +1057,25 @@
     "core.course.activitydisabled": "此活动已停用。",
     "core.course.activitynotyetviewableremoteaddon": "尚不支持此插件。",
     "core.course.activitynotyetviewablesiteupgradeneeded": "Moodle安装需要更新。",
-    "core.course.allsections": "全部章节",
+    "core.course.allsections": "全部小节",
     "core.course.askadmintosupport": "联系站点管理员并告诉他们您想要在Moodle Mobile App中使用此活动。",
     "core.course.confirmdeletemodulefiles": "您确定要删除这些文件吗？",
     "core.course.confirmdownload": "您即将下载{{size}}。你确定要继续吗？",
     "core.course.confirmdownloadunknownsize": "无法计算下载内容的大小。你确定要继续吗？",
     "core.course.confirmpartialdownloadsize": "你将要下载<strong>至少</strong>{{size}}。你确定要继续吗？",
     "core.course.contents": "内容",
-    "core.course.couldnotloadsectioncontent": "无法加载此章节内容。 请稍后再试。",
-    "core.course.couldnotloadsections": "无法加载此章节。 请稍后再试。",
+    "core.course.couldnotloadsectioncontent": "无法加载此小节内容。 请稍后再试。",
+    "core.course.couldnotloadsections": "无法加载此小节。 请稍后再试。",
     "core.course.coursesummary": "课程摘要",
     "core.course.downloadcourse": "下载课程",
     "core.course.errordownloadingcourse": "下载课程时出错。",
-    "core.course.errordownloadingsection": "下载章节出错。",
+    "core.course.errordownloadingsection": "下载小节出错。",
     "core.course.errorgetmodule": "获取活动数据时出错。",
     "core.course.hiddenfromstudents": "对学生隐藏",
     "core.course.nocontentavailable": "",
     "core.course.overriddennotice": "您在此活动中的最终成绩将自动调整。",
     "core.course.refreshcourse": "刷新课程",
-    "core.course.sections": "章节",
+    "core.course.sections": "小节",
     "core.course.useactivityonbrowser": "您仍然可以使用设备的网络浏览器来使用它。",
     "core.coursedetails": "课程详情",
     "core.courses.allowguests": "此课程允许访客进入",
@@ -1437,7 +1437,7 @@
     "core.settings.disabled": "不显示",
     "core.settings.enabledebugging": "启用调试功能",
     "core.settings.displayformat": "显示格式",
-    "core.settings.enabledownloadsection": "启用章节下载",
+    "core.settings.enabledownloadsection": "启用小节下载",
     "core.settings.enablerichtexteditor": "启用富文本编辑器",
     "core.settings.enablerichtexteditordescription": "如启用，则在输入内容时将显示富文本编辑器。如禁用，将显示纯文本编辑器。您可以在编辑时在两者之间切换。",
     "core.settings.enablesyncwifi": "仅在Wi-Fi连接时允许同步",
