hide sitename and url for login page and reconnect page

--- a/assets/lang/zh-cn.json
+++ b/assets/lang/zh-cn.json
@@ -1,6 +1,6 @@
 {
-    "addon.badges.badgedetails": "奖章详情",
-    "addon.badges.badges": "奖章",
+    "addon.badges.badgedetails": "勋章详情",
+    "addon.badges.badges": "勋章",
     "addon.badges.contact": "联系",
     "addon.badges.dateawarded": "授予日期",
     "addon.badges.expired": "已过期",
@@ -8,7 +8,7 @@
     "addon.badges.issuancedetails": "有效期",
     "addon.badges.issuerdetails": "颁发机构详情",
     "addon.badges.issuername": "颁发机构名称",
-    "addon.badges.nobadges": "没有可用的奖章",
+    "addon.badges.nobadges": "没有可用的勋章",
     "addon.badges.recipientdetails": "获得者详情",
     "addon.calendar.calendar": "日历",
     "addon.calendar.calendarevents": "日历事件",
@@ -25,7 +25,7 @@
     "addon.calendar.typedue": "到期活动",
     "addon.calendar.typegradingdue": "评分到期活动",
     "addon.calendar.typegroup": "小组活动",
-    "addon.calendar.typeopen": "公开赛",
+    "addon.calendar.typeopen": "公开活动",
     "addon.calendar.typesite": "站点活动",
     "addon.calendar.typeuser": "用户活动",
     "addon.competency.activities": "活动",
@@ -48,7 +48,7 @@
     "addon.competency.proficient": "精通",
     "addon.competency.progress": "学生进度",
     "addon.competency.rating": "正在评分",
-    "addon.competency.status": "奖章状态",
+    "addon.competency.status": "勋章状态",
     "addon.competency.template": "学习计划模板",
     "addon.competency.xcompetenciesproficientoutofy": "{{$a.y}}个能力中的{{$a.x}}是精通的",
     "addon.competency.xcompetenciesproficientoutofyincourse": "你精通这门课程{{$a.y}}个能力中的{{$a.x}}个。",
