Minor zh-cn translation adjustment

--- a/assets/lang/zh-cn.json
+++ b/assets/lang/zh-cn.json
@@ -1139,7 +1139,6 @@
     "core.edit": "编辑",
     "core.emptysplit": "如果侧面板为空或正在加载，此页面将显示为空白。",
     "core.error": "发生了错误",
-    "core.errordownloading": "下载文件时出错",
     "core.errordeletefile": "删除文件时出错。 请再试一次。",
     "core.errordownloading": "下载文件时出错。",
     "core.errordownloadingsomefiles": "下载模块文件时出错。 某些文件可能会丢失。",
@@ -1515,8 +1514,8 @@
     "core.user.details": "详情",
     "core.user.detailsnotavailable": "您无法使用此用户的详细信息。",
     "core.user.editingteacher": "教师",
-    "core.user.email": "电子邮件地址",
-    "core.user.emailagain": "电子邮件(重复)",
+    "core.user.email": "Email地址",
+    "core.user.emailagain": "Email(重复)",
     "core.user.errorloaduser": "加载用户时出错。",
     "core.user.firstname": "名",
     "core.user.interests": "兴趣",
