missing mod_workshop zh-cn strings supplement

--- a/assets/lang/zh-cn.json
+++ b/assets/lang/zh-cn.json
@@ -632,10 +632,20 @@
     "addon.mod_scorm.browse": "预览",
     "addon.mod_scorm.browsed": "已浏览",
     "addon.mod_scorm.browsemode": "预览模式",
+    "addon.mod_scorm.cannotcalculategrade": "无法计算成绩。",
     "addon.mod_scorm.completed": "已完成",
     "addon.mod_scorm.contents": "内容",
+    "addon.mod_scorm.dataattemptshown": "此数据属于尝试号{{number}}。",
     "addon.mod_scorm.enter": "进入",
     "addon.mod_scorm.exceededmaxattempts": "您已经达到最大尝试次数。",
+    "addon.mod_scorm.errordownloadscorm": "下载SCORM：\"{{name}}\"时出错。",
+    "addon.mod_scorm.errorgetscorm": "获取SCORM数据时出错。",
+    "addon.mod_scorm.errorinvalidversion": "抱歉，该应用程序仅支持SCORM 1.2。",
+    "addon.mod_scorm.errornotdownloadable": "SCORM软件包的下载已禁用。 请与您的站点管理员联系。",
+    "addon.mod_scorm.errornovalidsco": "此SCORM包没有可加载的可见SCO。",
+    "addon.mod_scorm.errorpackagefile": "抱歉，该应用程序仅支持ZIP包。",
+    "addon.mod_scorm.errorsyncscorm": "同步时发生错误。 请再试一次。",
+    "addon.mod_scorm.exceededmaxattempts": "您已达到最大尝试次数。",
     "addon.mod_scorm.failed": "失败",
     "addon.mod_scorm.firstattempt": "首次得分",
     "addon.mod_scorm.gradeaverage": "平均分",
@@ -654,9 +664,13 @@
     "addon.mod_scorm.noattemptsmade": "您已经尝试的次数",
     "addon.mod_scorm.normal": "普通",
     "addon.mod_scorm.notattempted": "未开始",
+    "addon.mod_scorm.offlineattemptnote": "此尝试的数据尚未同步。",
+    "addon.mod_scorm.offlineattemptovermax": "由于您超过了最大尝试次数，因此无法发送此尝试。",
     "addon.mod_scorm.organizations": "组织",
     "addon.mod_scorm.passed": "已通过",
     "addon.mod_scorm.reviewmode": "复习模式",
+    "addon.mod_scorm.scormstatusnotdownloaded": "此SCORM包未下载。 打开它时会自动下载。",
+    "addon.mod_scorm.scormstatusoutdated": "自上次下载以来，此SCORM包已被修改。 打开它时会自动下载。",
     "addon.mod_scorm.suspended": "已暂停",
     "addon.mod_scorm.warningofflinedatadeleted": "来自第{{number}}次尝试的某些脱机数据已被丢弃，因为它无法算作新尝试。",
     "addon.mod_scorm.warningsynconlineincomplete": "某些尝试无法与网站同步，因为上一次在线尝试尚未完成。 请先完成在线尝试。",
@@ -688,6 +702,76 @@
     "addon.mod_wiki.viewpage": "查看页面",
     "addon.mod_wiki.wikipage": "Wiki页面",
     "addon.mod_wiki.wrongversionlock": "在您正编辑此页面时，另一个人已经做了编辑，所以您的修改已过时。",
+    "addon.mod_workshop.alreadygraded": "已评分",
+    "addon.mod_workshop.areainstructauthors": "提交说明",
+    "addon.mod_workshop.areainstructreviewers": "评估说明",
+    "addon.mod_workshop.assess": "评估",
+    "addon.mod_workshop.assessedsubmission": "评估提交",
+    "addon.mod_workshop.assessmentform": "评估表",
+    "addon.mod_workshop.assessmentsettings": "评估设置",
+    "addon.mod_workshop.assessmentstrategynotsupported": "评估策略{{$a}}不受支持",
+    "addon.mod_workshop.assessmentweight": "评估权重",
+    "addon.mod_workshop.assignedassessments": "分配的提交内容进行评估",
+    "addon.mod_workshop.conclusion": "结论",
+    "addon.mod_workshop.createsubmission": "开始准备您的提交",
+    "addon.mod_workshop.deletesubmission": "删除提交",
+    "addon.mod_workshop.editsubmission": "编辑提交",
+    "addon.mod_workshop.feedbackauthor": "对作者的反馈",
+    "addon.mod_workshop.feedbackby": "{{$a}}的反馈",
+    "addon.mod_workshop.feedbackreviewer": "对审稿人的反馈",
+    "addon.mod_workshop.givengrades": "给出评分",
+    "addon.mod_workshop.gradecalculated": "提交的计算评分",
+    "addon.mod_workshop.gradeinfo": "评分：{{$a.received}}/满分{{$a.max}}",
+    "addon.mod_workshop.gradeover": "提交的覆盖评分",
+    "addon.mod_workshop.gradesreport": "互动评价评分报告",
+    "addon.mod_workshop.gradinggrade": "评估评分",
+    "addon.mod_workshop.gradinggradecalculated": "评估的计算评分",
+    "addon.mod_workshop.gradinggradeof": " ({{$a}}的)评估的评分",
+    "addon.mod_workshop.gradinggradeover": "评估的覆盖评分",
+    "addon.mod_workshop.nogradeyet": "还未评分",
+    "addon.mod_workshop.notassessed": "还未评估",
+    "addon.mod_workshop.notoverridden": "没有被覆盖",
+    "addon.mod_workshop.noyoursubmission": "您尚未提交作业",
+    "addon.mod_workshop.overallfeedback": "总体反馈",
+    "addon.mod_workshop.publishedsubmissions": "已发布的提交",
+    "addon.mod_workshop.publishsubmission": "发布提交",
+    "addon.mod_workshop.publishsubmission_help": "互动评价结束时，其他人可以获得已发布的提交。",
+    "addon.mod_workshop.reassess": "重新评估",
+    "addon.mod_workshop.receivedgrades": "收到的评分",
+    "addon.mod_workshop.selectphase": "选择阶段",
+    "addon.mod_workshop.submissionattachment": "附件",
+    "addon.mod_workshop.submissioncontent": "提交内容",
+    "addon.mod_workshop.submissiondeleteconfirm": "您确定要删除以下提交内容吗？",
+    "addon.mod_workshop.submissiongrade": "提交评分",
+    "addon.mod_workshop.submissiongradeof": "({{$a}}的)提交评分",
+    "addon.mod_workshop.submissionrequiredcontent": "您需要输入一些文本或添加文件。",
+    "addon.mod_workshop.submissionrequiredtitle": "你需要输入一个标题。",
+    "addon.mod_workshop.submissionsreport": "互动评价提交报告",
+    "addon.mod_workshop.submissiontitle": "标题",
+    "addon.mod_workshop.switchphase10": "切换到设置阶段",
+    "addon.mod_workshop.switchphase20": "切换到提交阶段",
+    "addon.mod_workshop.switchphase30": "切换到评估阶段",
+    "addon.mod_workshop.switchphase40": "切换到评价阶段",
+    "addon.mod_workshop.switchphase50": "关闭互动评价",
+    "addon.mod_workshop.userplancurrentphase": "当前阶段",
+    "addon.mod_workshop.warningassessmentmodified": "提交已在网站上修改。",
+    "addon.mod_workshop.warningsubmissionmodified": "评估已在网站上修改。",
+    "addon.mod_workshop.weightinfo": "权重：{{$a}}",
+    "addon.mod_workshop.yourassessment": "您的评估",
+    "addon.mod_workshop.yourassessmentfor": "您对{{$a}}的评估",
+    "addon.mod_workshop.yourgrades": "您的评分",
+    "addon.mod_workshop.yoursubmission": "您的提交",
+    "addon.mod_workshop_assessment_accumulative.dimensioncommentfor": "给{{$a}}的评论",
+    "addon.mod_workshop_assessment_accumulative.dimensiongradefor": "给{{$a}}的评分",
+    "addon.mod_workshop_assessment_accumulative.dimensionnumber": "{{$a}}方面",
+    "addon.mod_workshop_assessment_accumulative.mustchoosegrade": "您必须为此方面选择一个评分",
+    "addon.mod_workshop_assessment_comments.dimensioncommentfor": "给{{$a}}的评论",
+    "addon.mod_workshop_assessment_comments.dimensionnumber": "{{$a}}方面",
+    "addon.mod_workshop_assessment_numerrors.dimensioncommentfor": "给{{$a}}的评论",
+    "addon.mod_workshop_assessment_numerrors.dimensiongradefor": "给{{$a}}的评分",
+    "addon.mod_workshop_assessment_numerrors.dimensionnumber": "{{$a}}断言",
+    "addon.mod_workshop_assessment_rubric.dimensionnumber": "{{$a}}条件",
+    "addon.mod_workshop_assessment_rubric.mustchooseone": "您必须选择其中一项",
     "addon.notes.addnewnote": "添加一个新备注",
     "addon.notes.coursenotes": "课程备注",
     "addon.notes.eventnotecreated": "创建的备注",
@@ -734,6 +818,7 @@
     "assets.countries.BM": "百慕大",
     "assets.countries.BN": "文莱",
     "assets.countries.BO": "玻利维亚",
+    "assets.countries.BQ": "博内尔岛，圣尤斯特歇斯和萨巴岛",
     "assets.countries.BR": "巴西",
     "assets.countries.BS": "巴哈马",
     "assets.countries.BT": "不丹",
@@ -1335,7 +1420,7 @@
     "core.mod_imscp": "IMS内容课件",
     "core.mod_label": "标签",
     "core.mod_lesson": "程序教学",
-    "core.mod_lti": "LTI",
+    "core.mod_lti": "外部工具",
     "core.mod_page": "网页",
     "core.mod_podcast": "播客",
     "core.mod_questionnaire": "问卷调查",
